Database connection, fix attempt 1
Added in a specific port to use as well as reformating the connection
string, extra.dll files were added to the project to ensure all that we
needed were there

--- a/The Fellnight Prison/Assembly-CSharp-firstpass.csproj
+++ b/The Fellnight Prison/Assembly-CSharp-firstpass.csproj
@@ -112,6 +112,12 @@
  <Reference Include="websocket-sharp">
  <HintPath>C:/Users/Phil/Documents/GitHub/TheFellnightPrison/The Fellnight Prison/Assets/Plugins/WebSocket/websocket-sharp.dll</HintPath>
  </Reference>
+ <Reference Include="I18N.West">
+ <HintPath>C:/Users/Phil/Documents/GitHub/TheFellnightPrison/The Fellnight Prison/Assets/Plugins/I18N.West.dll</HintPath>
+ </Reference>
+ <Reference Include="I18N">
+ <HintPath>C:/Users/Phil/Documents/GitHub/TheFellnightPrison/The Fellnight Prison/Assets/Plugins/I18N.dll</HintPath>
+ </Reference>
  <Reference Include="Mono.Cecil">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/Mono.Cecil.dll</HintPath>
  </Reference>
