--- a/The Fellnight Prison/Assembly-CSharp.csproj
+++ b/The Fellnight Prison/Assembly-CSharp.csproj
@@ -160,7 +160,6 @@
      <Compile Include="Assets\Scripts\Character Controller\PlayerWeapon.cs" />
      <Compile Include="Assets\Scripts\Character Controller\Swing.cs" />
      <Compile Include="Assets\Scripts\EnemyAI.cs" />
-     <Compile Include="Assets\Scripts\EnemyAttack.cs" />
      <Compile Include="Assets\Scripts\FriendWeb\FriendClass.cs" />
      <Compile Include="Assets\Scripts\FriendWeb\FriendDatabase.cs" />
      <Compile Include="Assets\Scripts\HitBox.cs" />
@@ -192,6 +191,7 @@
      <Compile Include="Assets\Scripts\Jelly Smash Import\Scripts\Start\StartMenu.cs" />
      <Compile Include="Assets\Scripts\MainController.cs" />
      <Compile Include="Assets\Scripts\MakeMap.cs" />
+     <Compile Include="Assets\Scripts\MasterPlayerHealth.cs" />
      <Compile Include="Assets\Scripts\MobHealth.cs" />
      <Compile Include="Assets\Scripts\NavMeshScript.cs" />
      <Compile Include="Assets\Scripts\Networking\Controller.cs" />
